# campuscoin

./: INSTALL  Makefile.am  README.md  configure.ac  smallchange-qt.pro
contrib/: README.md  campuscoin-qt.pro  campuscoind.bash-completion  qt_translations.py
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  campuscoin-qt.desktop  campuscoin-qt.install  campuscoin-qt.lintian-overrides  campuscoin-qt.protocol  campuscoind.bash-completion  campuscoind.examples  campuscoind.install  campuscoind.lintian-overrides  campuscoind.manpages  changelog  control  copyright  rules  watch
contrib/debian/examples/: campuscoin.conf
contrib/debian/manpages/: campuscoin-qt.1  campuscoin.conf.5  campuscoind.1
contrib/devtools/: README.md  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/pyminer/: README.md
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-campuscoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  rpcbind_test.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
qa/rpc-tests/python-bitcoinrpc/: setup.py
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: campuscoin128.xpm  campuscoin16.xpm  campuscoin256.xpm  campuscoin32.xpm  campuscoin64.xpm
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile.am  Makefile.include  addrman.h  alert.h  allocators.h  base58.h  base58.h~  bitcoinrpc.cpp  bitcoinrpc.cpp~  bloom.h  campuscoin-cli-res.rc  campuscoin-cli.cpp  campuscoind-res.rc  campuscoind.cpp  chainparams.cpp  chainparams.h  checkpoints.cpp~  checkpoints.h  clientversion.h  coins.h  compat.h  core.h  db.h  hash.h  init.cpp  init.cpp~  init.h  irc.cpp  key.h  keystore.h  leveldbwrapper.h  limitedmap.h  main.cpp  main.cpp~  main.h  main.h~  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  (+38 more)
src/compat/: glibc_compat.cpp
src/m4/: campuscoin_find_bdb48.m4  campuscoin_qt.m4  campuscoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  campuscoin.cpp  campuscoin.qrc  campuscoinaddressvalidator.cpp  campuscoinaddressvalidator.h  campuscoinamountfield.cpp  campuscoinamountfield.h  campuscoingui.cpp  campuscoingui.h  campuscoinstrings.cpp  campuscoinunits.cpp  campuscoinunits.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  miningpage.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentrequest.proto  paymentserver.cpp  paymentserver.h  qrcodedialog.cpp  qtipcserver.cpp  qvalidatedlineedit.cpp  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  (+16 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: campuscoin_ach.ts  campuscoin_af_ZA.ts  campuscoin_ar.ts  campuscoin_be_BY.ts  campuscoin_bg.ts  campuscoin_bs.ts  campuscoin_ca.ts  campuscoin_ca@valencia.ts  campuscoin_ca_ES.ts  campuscoin_cmn.ts  campuscoin_cs.ts  campuscoin_cy.ts  campuscoin_da.ts  campuscoin_de.ts  campuscoin_el_GR.ts  campuscoin_en.ts  campuscoin_eo.ts  campuscoin_es.ts  campuscoin_es_CL.ts  campuscoin_es_DO.ts  campuscoin_es_MX.ts  campuscoin_es_UY.ts  campuscoin_et.ts  campuscoin_eu_ES.ts  campuscoin_fa.ts  campuscoin_fa_IR.ts  campuscoin_fi.ts  campuscoin_fr.ts  campuscoin_fr_CA.ts  campuscoin_gl.ts  campuscoin_gu_IN.ts  campuscoin_he.ts  campuscoin_hi_IN.ts  campuscoin_hr.ts  campuscoin_hu.ts  campuscoin_id_ID.ts  campuscoin_it.ts  campuscoin_ja.ts  campuscoin_ka.ts  campuscoin_kk_KZ.ts  (+31 more)
src/qt/res/: campuscoin-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  README.md  bignum.h  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  netbase_tests.cpp  test_campuscoin.cpp  wallet_tests.cpp
src/test/data/: sighash.json  tx_valid.json
